# R1D1_v1

./: README.md  r1d1.xacro  readme.md
command_publischer/: package.xml  setup.cfg  setup.py
command_publischer/command_publischer/: cmd_publisher.py
moveit_fr3_v6/: read_before_proceeding
moveit_fr3_v6/hello_moveit/: package.xml
moveit_fr3_v6/send_to_moveit/: package.xml  setup.cfg  setup.py
moveit_fr3_v6/send_to_moveit/send_to_moveit/: send_to_moveit.py
r1d1_arm_description/: package.xml  setup.cfg  setup.py
r1d1_arm_description/launch/: display.launch.py  gazebo.launch.py
r1d1_arm_description/meshes/: base_link.stl  forearm_Link_1.stl  shoulder_Link_1.stl  upperarm_Link_1.stl  wrist1_Link_1.stl  wrist2_Link_1.stl  wrist3_Link_1.stl
r1d1_arm_description/urdf/: materials.xacro  r1d1_arm.gazebo  r1d1_arm.trans  r1d1_arm.xacro
r1d1_arm_moveit_config/: CMakeLists.txt  package.xml
r1d1_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  r1d1_arm.ros2_control.xacro  r1d1_arm.srdf  r1d1_arm.urdf.xacro  ros2_controllers.yaml
r1d1_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
r1d1_description/: package.xml  setup.cfg  setup.py
r1d1_description/config/: display.rviz  lidar.xacro  mapper_params_online_async.yaml  r1d1.yaml  twist_mux.yaml
r1d1_description/urdf/: r1d1.gv  (+8 more)
slider_oscillator/: package.xml  setup.cfg  setup.py
(+27 files in other folders)
