<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>send_to_moveit</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="badass-ravi@todo.todo">badass-ravi</maintainer>
  <license>TODO: License declaration</license>

  <depend>moveit_ros_planning_interface</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
